# ThingMagic

./: CMakeLists.txt  Doxyfile  README.md  TMR.kdev4
libs/Includes/: llrp_reader_imp.h  osdep.h  out_ltkc.h  out_tm_ltkc.h  serial_reader_imp.h  tm_config.h  tm_reader.h  tmr_gen2.h  tmr_llrp_reader.h  tmr_params.h  tmr_read_plan.h  tmr_serial_reader.h  tmr_serial_transport.h  tmr_status.h  tmr_tag_auth.h  tmr_tag_data.h  tmr_tag_protocol.h  tmr_tagop.h  tmr_utils.h
libs/Libraries/ARM/: libltkc.so.1  libltkctm.so.1  libmercuryapi.so.1
libs/Libraries/Intel/: libltkc.so.1  libltkctm.so.1  libmercuryapi.so.1
libs/patches/: API.patch  LLRP.org.patch  Library.patch  README
src/: CMakeLists.txt  Makefile.bak  TMReader.c  config.app
src/AggLists/: AggLists.c  AggLists.h
src/ConfigUtils/: CMakeLists.txt  configUtils.c  configUtils.h
src/Serial_Comms/: Serial_Comms.c  Serial_Comms.h  test.c
src/Socket_Comms/: CMakeLists.txt  socket_comms.c  socket_comms.h
